# PetFinder.my-AI-Kohol

./: .gitignore  main.py  pyproject.toml
documentation/: CHANGELOG.md  DataDescription.md  Image_Embeddings_Backbone_Comparison_Results.md  Imbalance_Handling_Strategy_Comparison.md  PLAN.md  README.md  RESULTS.md
documentation/class_variance_test_results/: RESULTS.md
documentation/pca_analysis/components/: pc01_loadings.csv  pc02_loadings.csv  pc03_loadings.csv  pc06_loadings.csv  pc07_loadings.csv  pc08_loadings.csv  pc09_loadings.csv  pc11_loadings.csv  pc12_loadings.csv  pc14_loadings.csv  pc15_loadings.csv
outputs/pca_analysis/: breed_pca_analysis.txt
outputs/pca_analysis/components/: pc04_loadings.csv  pc05_loadings.csv  pc10_loadings.csv  pc13_loadings.csv
src/: breed_pca_analysis.py  data.py  data_analysis.py  evaluate.py  image_embeddings.py  lgbm.py  model.py  preprocessing.py  random_forest.py  results_summary.py  utils.py
